2009-03-07  Badlop  <badlop@process-one.net>

	* src/Makefile.in: In SunOS, use different C flags (thanks to
	Thomas)(EJAB-438)
	* src/ejabberd_zlib/Makefile.in: Likewise
	* src/mod_irc/Makefile.in: Likewise
	* src/stringprep/Makefile.in: Likewise
	* src/tls/Makefile.in: Likewise

	* src/ejabberd_c2s.erl: Enforce privacy rules also for
	subscription requests (EJAB-300)
	* src/ejabberd_sm.erl: Likewise

	* src/mod_privacy.erl: Temporary workaround to inconsistency
	* src/mod_privacy_odbc.erl: Likewise

2009-03-06  Badlop  <badlop@process-one.net>

	* src/eldap/eldap.erl: moves waiting for response queries to
	pending queue on an LDAP connection failure (thanks to Evgeniy
	Khramtsov)

	* src/eldap/eldap.erl: implemented queue for pending
	queries (thanks to Evgeniy Khramtsov)

	* src/eldap/eldap.erl: Close a connection on tcp_error (thanks to
	Evgeniy Khramtsov)

2009-03-05  Badlop  <badlop@process-one.net>

	* src/ejabberd_app.erl: In a Windows machine, explicitly add the
	nameservers, as it seems Erlang does not do itself (EJAB-860)
	* src/win32_dns.erl: Get name servers from Windows registy (thanks
	to Geoff Cant)

	* doc/guide.tex: Require OpenSSL 0.9.8f or higher (EJAB-877)
	* doc/guide.html: Likewise

2009-03-04  Badlop  <badlop@process-one.net>

	* src/ejabberd_auth.erl: If anonymous auth is enabled, when
	checking if the account already exists in other auth methods, take
	into account if the auth method failed (EJAB-882)
	* src/ejabberd_auth_anonymous.erl: Likewise
	* src/ejabberd_auth_external.erl: Likewise
	* src/ejabberd_auth_internal.erl: Likewise
	* src/ejabberd_auth_ldap.erl: Likewise
	* src/ejabberd_auth_odbc.erl: Likewise
	* src/ejabberd_auth_pam.erl: Likewise

	* src/mod_caps.erl: Fix two small compilation errors

2009-03-04  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Add roster subscriptions handling
	so on_sub_and_presence if fully supported.
